syntax = "proto3";
option go_package = ".;priceServicePackage";
package priceServicePackage;


message ItemDetail {
    int64 item_id = 1;
    string item_name = 2;
    int64 shop_id = 3;
}

message ItemPrice {
    int64 item_id = 1;
    int32 price = 2;
    int64 time = 3;
}


message PriceLogItem {
    int32 price = 1;
    int64 time = 2;
}

message ReadItemDetailRequest {
    int64 item_id = 1;
}

message ReadItemDetailResponse {
    ItemDetail itemDetail = 1;
    int64 notFound = 2;
}

message ReadItemInfoRequest {
    repeated int64 item_id = 1;
}

message ReadItemInfoResponse {
    repeated ItemDetail item_details = 1;
}

message CreateItemDetailPriceRequest {
    int64 item_id = 1;
    int64 shop_id = 2;
}

message CreateItemDetailPriceResponse {
    int64 success = 1;
}

// message ReadFlashSalesRequest {
// }

// message ReadFlashSalesResponse {
//     repeated FlashSalesItem flashItems = 1;
// }

message ReadPriceChangeRequest {
    int64 item_id = 1;
}

message ReadPriceChangeResponse {
    repeated PriceLogItem list = 1;
    int64 notFound = 2;
}

service PriceService {

    rpc ReadItemDetails(ReadItemDetailRequest) returns (ReadItemDetailResponse);
    rpc CreateItemDetailPrice(CreateItemDetailPriceRequest) returns (CreateItemDetailPriceResponse);
    // rpc ReadFlashSales(ReadFlashSalesRequest) returns (ReadFlashSalesResponse);
    rpc ReadPriceChange(ReadPriceChangeRequest) returns (ReadPriceChangeResponse);
    rpc ReadItemInfo(ReadItemInfoRequest) returns (ReadItemInfoResponse);
}

